# yew_wumpus

./: Cargo.toml  package.json
scss/: hunt.scss
src/: game.rs  lib.rs  main.rs  util.rs
src/components/: controls.rs  messages.rs  mod.rs  stats.rs
static/: index.html
