[package]
name = "rumpus"
version = "0.1.0"
authors = ["Gerardo Heidel <heidel.gerardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/DenisKolodin/yew" }

[lib]
name = "rumpus"
path = "src/lib.rs"
